; ModuleID = '/home/carl/AnghaBench/linux/sound/soc/codecs/extr_rt1011.c_rt1011_dac_event.c'
source_filename = "/home/carl/AnghaBench/linux/sound/soc/codecs/extr_rt1011.c_rt1011_dac_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.snd_soc_dapm_widget = type { i32 }
%struct.snd_kcontrol = type { i32 }
%struct.snd_soc_component = type { i32 }

@RT1011_SPK_TEMP_PROTECT_0 = common dso_local global i32 0, align 4
@RT1011_STP_EN_MASK = common dso_local global i32 0, align 4
@RT1011_STP_RS_CLB_EN_MASK = common dso_local global i32 0, align 4
@RT1011_STP_EN = common dso_local global i32 0, align 4
@RT1011_STP_RS_CLB_EN = common dso_local global i32 0, align 4
@RT1011_POWER_9 = common dso_local global i32 0, align 4
@RT1011_POW_MNL_SDB_MASK = common dso_local global i32 0, align 4
@RT1011_POW_MNL_SDB = common dso_local global i32 0, align 4
@RT1011_CLASSD_INTERNAL_SET_1 = common dso_local global i32 0, align 4
@RT1011_DRIVER_READY_SPK = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.snd_soc_dapm_widget*, %struct.snd_kcontrol*, i32)* @rt1011_dac_event to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rt1011_dac_event(%struct.snd_soc_dapm_widget* %0, %struct.snd_kcontrol* %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.snd_soc_dapm_widget*, align 8
  %6 = alloca %struct.snd_kcontrol*, align 8
  %7 = alloca i32, align 4
  %8 = alloca %struct.snd_soc_component*, align 8
  store %struct.snd_soc_dapm_widget* %0, %struct.snd_soc_dapm_widget** %5, align 8
  store %struct.snd_kcontrol* %1, %struct.snd_kcontrol** %6, align 8
  store i32 %2, i32* %7, align 4
  %9 = load %struct.snd_soc_dapm_widget*, %struct.snd_soc_dapm_widget** %5, align 8
  %10 = getelementptr inbounds %struct.snd_soc_dapm_widget, %struct.snd_soc_dapm_widget* %9, i32 0, i32 0
  %11 = load i32, i32* %10, align 4
  %12 = call %struct.snd_soc_component* @snd_soc_dapm_to_component(i32 %11)
  store %struct.snd_soc_component* %12, %struct.snd_soc_component** %8, align 8
  %13 = load i32, i32* %7, align 4
  switch i32 %13, label %51 [
    i32 129, label %14
    i32 128, label %35
  ]

14:                                               ; preds = %3
  %15 = load %struct.snd_soc_component*, %struct.snd_soc_component** %8, align 8
  %16 = load i32, i32* @RT1011_SPK_TEMP_PROTECT_0, align 4
  %17 = load i32, i32* @RT1011_STP_EN_MASK, align 4
  %18 = load i32, i32* @RT1011_STP_RS_CLB_EN_MASK, align 4
  %19 = or i32 %17, %18
  %20 = load i32, i32* @RT1011_STP_EN, align 4
  %21 = load i32, i32* @RT1011_STP_RS_CLB_EN, align 4
  %22 = or i32 %20, %21
  %23 = call i32 @snd_soc_component_update_bits(%struct.snd_soc_component* %15, i32 %16, i32 %19, i32 %22)
  %24 = load %struct.snd_soc_component*, %struct.snd_soc_component** %8, align 8
  %25 = load i32, i32* @RT1011_POWER_9, align 4
  %26 = load i32, i32* @RT1011_POW_MNL_SDB_MASK, align 4
  %27 = load i32, i32* @RT1011_POW_MNL_SDB, align 4
  %28 = call i32 @snd_soc_component_update_bits(%struct.snd_soc_component* %24, i32 %25, i32 %26, i32 %27)
  %29 = call i32 @msleep(i32 50)
  %30 = load %struct.snd_soc_component*, %struct.snd_soc_component** %8, align 8
  %31 = load i32, i32* @RT1011_CLASSD_INTERNAL_SET_1, align 4
  %32 = load i32, i32* @RT1011_DRIVER_READY_SPK, align 4
  %33 = load i32, i32* @RT1011_DRIVER_READY_SPK, align 4
  %34 = call i32 @snd_soc_component_update_bits(%struct.snd_soc_component* %30, i32 %31, i32 %32, i32 %33)
  br label %52

35:                                               ; preds = %3
  %36 = load %struct.snd_soc_component*, %struct.snd_soc_component** %8, align 8
  %37 = load i32, i32* @RT1011_POWER_9, align 4
  %38 = load i32, i32* @RT1011_POW_MNL_SDB_MASK, align 4
  %39 = call i32 @snd_soc_component_update_bits(%struct.snd_soc_component* %36, i32 %37, i32 %38, i32 0)
  %40 = load %struct.snd_soc_component*, %struct.snd_soc_component** %8, align 8
  %41 = load i32, i32* @RT1011_SPK_TEMP_PROTECT_0, align 4
  %42 = load i32, i32* @RT1011_STP_EN_MASK, align 4
  %43 = load i32, i32* @RT1011_STP_RS_CLB_EN_MASK, align 4
  %44 = or i32 %42, %43
  %45 = call i32 @snd_soc_component_update_bits(%struct.snd_soc_component* %40, i32 %41, i32 %44, i32 0)
  %46 = call i32 @msleep(i32 200)
  %47 = load %struct.snd_soc_component*, %struct.snd_soc_component** %8, align 8
  %48 = load i32, i32* @RT1011_CLASSD_INTERNAL_SET_1, align 4
  %49 = load i32, i32* @RT1011_DRIVER_READY_SPK, align 4
  %50 = call i32 @snd_soc_component_update_bits(%struct.snd_soc_component* %47, i32 %48, i32 %49, i32 0)
  br label %52

51:                                               ; preds = %3
  store i32 0, i32* %4, align 4
  br label %53

52:                                               ; preds = %35, %14
  store i32 0, i32* %4, align 4
  br label %53

53:                                               ; preds = %52, %51
  %54 = load i32, i32* %4, align 4
  ret i32 %54
}

declare dso_local %struct.snd_soc_component* @snd_soc_dapm_to_component(i32) #1

declare dso_local i32 @snd_soc_component_update_bits(%struct.snd_soc_component*, i32, i32, i32) #1

declare dso_local i32 @msleep(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
